spade-tests/src/snapshots/spade_tests__typeinference__fields_on_declared_vars_can_be_used.snap
---
source: spade-tests/src/typeinference.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Expected type bool, got int<32>
  ┌─ testinput:5:22
  │
5 │     let _: int<32> = x.a;
  │                      ^^^ Expected bool here


